--- a/extra.tex
+++ b/extra.tex
@@ -1259,7 +1259,7 @@ This section includes the following magnet strength scans: ~
 \newpage
 
 \hiddensubsection{ \hyperref[section:scans]{ Central Solenoid Thickness -- $d$ } }
-  \label{subsection:scan_d} 
+  \label{subsection:scan_d}
 
 \begin{figure*}[h!]
     \centering
@@ -1476,7 +1476,7 @@ This section includes the following cost sensitivity studies: ~
   \item \hyperref[subsection:sensitivity_N_G]{ Greenwald Fraction -- $N_G$  }
   \item \hyperref[subsection:sensitivity_f_D]{ Dilution Factor -- $f_D$  }
   \item \hyperref[subsection:sensitivity_Z_eff]{ Effective Charge -- $Z_{eff}$  }
-  \item \hyperref[subsection:sensitivity_epsilon]{ Inverse Aspect Ratio -- $\epsilon$  }
+  \item \hyperref[subsection:sensitivity_epsilon]{ Inverse Aspect Ratio -- $\varepsilon$  }
   \item \hyperref[subsection:sensitivity_kappa_95]{ Elongation -- $\kappa_{95}$  }
   \item \hyperref[subsection:sensitivity_delta_95]{ Triangularity -- $\delta_{95}$  }
   \item \hyperref[subsection:sensitivity_nu_n]{ Density Peaking Factor -- $\nu_n$  }
@@ -1911,7 +1911,7 @@ This section includes the following cost sensitivity studies: ~
 
 \newpage
 
-\hiddensubsection{ \hyperref[section:studies]{ Inverse Aspect Ratio -- $\epsilon$ } }
+\hiddensubsection{ \hyperref[section:studies]{ Inverse Aspect Ratio -- $\varepsilon$ } }
   \label{subsection:sensitivity_epsilon}
 
 \begin{figure*}[h!]
@@ -1973,7 +1973,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Cost Sensitivity: $\epsilon$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $\varepsilon$ vs. $B_0$} ~\\
 \end{figure*}
 
 
