--- a/main.tex
+++ b/main.tex
@@ -76,13 +76,13 @@
 
 \setlength{\jot}{2.25ex}
 
-%\includeonly{contents,biblio,future}
+%\includeonly{lhcd} 
 
 \interfootnotelinepenalty=10000
 
 \newcommand{\hiddensubsection}[1]{
     \stepcounter{subsection}
-    \subsection*{\arabic{chapter}.\arabic{section}.\arabic{subsection}\hspace{1em}{#1}}
+    \subsection*{\Alph{chapter}.\arabic{section}.\arabic{subsection}\hspace{1em}{#1}}
 }
 
 \begin{document}
