--- a/power.tex
+++ b/power.tex
@@ -60,7 +60,7 @@ Summarizing the work of \cref{subsection:fusion_derive}, this fusion power volum
 \begin{gather}
 	P_F = K_F \cdot ( \, \overline{n}^2 \, R_0^3 \, ) \cdot (\sigma v) \ \ \ [MW] \\
 	 (\sigma v) = 10^{21} \, (1+\nu_n)^2 \int\limits_0^1 ( 1 - \rho^2 ) ^ { \, 2 \nu_n} \langle \sigma v \rangle \, \rho \, d\rho \\
-	K_F = 278.3 \, ( f_D^2 \, \epsilon^2 \kappa \, g )
+	K_F = 278.3 \, ( f_D^2 \, \varepsilon^2 \kappa \, g )
 \end{gather}
 This reactivity term (or volumetric fusion reaction rate) can then be approximated by the Bosch-Hale parameterization, with coefficients given in \cref{table:rrParam}.\cite{boschhale,zach}
 \begin{equation}
