--- a/variables.tex
+++ b/variables.tex
@@ -13,7 +13,7 @@
 is\_pulsed & is reactor pulsed or steady-state \\
 $H$ & Enhancement factor for ELMy H-mode scaling \\
 $Q$ & Physics Gain ($P_F/P_H$) \\
-$\epsilon$ & Inverse aspect ratio \\
+$\varepsilon$ & Inverse aspect ratio \\
 $\kappa_{95}$ &  Elongation at 95 flux surface \\
 $\delta_{95}$ &  Triangularity at 95 flux surface \\
 $\nu_n$ &  Parabolic density peaking factor \\
