--- a/images/geometry_epsilon.tex
+++ b/images/geometry_epsilon.tex
@@ -1,5 +1,5 @@
 \begin{tikzpicture}[]
-\begin{axis}[height = {101.6mm}, axis equal = {true}, ylabel = {Z [m]}, title = {$\textnormal{Inverse Aspect Ratio} - \epsilon$}, xmin = {-10}, xmax = {10}, ymax = {10}, xlabel = {R [m]}, {unbounded coords=jump, scaled x ticks = false, xticklabel style={rotate = 0}, xmajorgrids = true, xtick = {-10.0,-5.0,0.0,5.0,10.0}, xticklabels = {-10,-5,0,5,10}, xtick align = inside, axis lines* = left, scaled y ticks = false, yticklabel style={rotate = 0}, ymajorgrids = true, ytick = {-10.0,-5.0,0.0,5.0,10.0}, yticklabels = {-10,-5,0,5,10}, ytick align = inside, axis lines* = left,     xshift = 0.0mm,
+\begin{axis}[height = {101.6mm}, axis equal = {true}, ylabel = {Z [m]}, title = {$\textnormal{Inverse Aspect Ratio} - \varepsilon$}, xmin = {-10}, xmax = {10}, ymax = {10}, xlabel = {R [m]}, {unbounded coords=jump, scaled x ticks = false, xticklabel style={rotate = 0}, xmajorgrids = true, xtick = {-10.0,-5.0,0.0,5.0,10.0}, xticklabels = {-10,-5,0,5,10}, xtick align = inside, axis lines* = left, scaled y ticks = false, yticklabel style={rotate = 0}, ymajorgrids = true, ytick = {-10.0,-5.0,0.0,5.0,10.0}, yticklabels = {-10,-5,0,5,10}, ytick align = inside, axis lines* = left,     xshift = 0.0mm,
     yshift = 0.0mm,
     axis background/.style={fill={rgb,1:red,1.00000000;green,1.00000000;blue,1.00000000}}
 }, ymin = {-10}, width = {152.4mm}]\addplot+ [color = {rgb,1:red,0.00000000;green,0.60560316;blue,0.97868012},
@@ -65,7 +65,7 @@ mark options = {
 (8.081204069972497, -0.483375671167435)
 (8.1, -9.258329801553988e-16)
 };
-\addlegendentry{$\epsilon = 0.35$}
+\addlegendentry{$\varepsilon = 0.35$}
 \addplot+ [color = {rgb,1:red,0.00000000;green,0.60560316;blue,0.97868012},
 draw opacity=1.0,
 line width=1.5,
@@ -192,7 +192,7 @@ mark options = {
 (7.486574335694641, -0.3452683365481679)
 (7.5, -6.613092715395707e-16)
 };
-\addlegendentry{$\epsilon = 0.25$}
+\addlegendentry{$\varepsilon = 0.25$}
 \addplot+ [color = {rgb,1:red,0.88887350;green,0.43564919;blue,0.27812294},
 draw opacity=1.0,
 line width=1,
