--- a/steady.tex
+++ b/steady.tex
@@ -63,15 +63,15 @@ The first thing people see when they look at a tokamak is its geometry \added{--
     \label{fig:views}
 \end{figure*}
 
-These questions lend themselves to the three important geometric variables -- the inverse aspect ratio ($\epsilon$), the elongation ($\kappa$), and the triangularity ($\delta$). The inverse aspect ratio is a measure of how stretched out the device is, or formulaically:
+These questions lend themselves to the three important geometric variables -- the inverse aspect ratio ($\varepsilon$), the elongation ($\kappa$), and the triangularity ($\delta$). The inverse aspect ratio is a measure of how stretched out the device is, or formulaically:
 \begin{equation}
 	\label{eq:a}
 	\tcboxmath{
-	a = \epsilon \cdot R_0
+	a = \varepsilon \cdot R_0
 	}
 \end{equation}
 \myequations{Minor Radius -- $a$}
-This says that the minor radius (a), measured in meters, is related to the major radius of the machine ($R_0$) through $\epsilon$. Or more tangibly, the minor radius is related to the two small \replaced{cross-sections}{circles} that \replaced{result from a slice across the major radius of the machine.}{come from tearing a bagel in two. Whereas the major radius is related to the overall circle of the bagel when viewing it from the top.}
+This says that the minor radius (a), measured in meters, is related to the major radius of the machine ($R_0$) through $\varepsilon$. Or more tangibly, the minor radius is related to the two small \replaced{cross-sections}{circles} that \replaced{result from a slice across the major radius of the machine.}{come from tearing a bagel in two. Whereas the major radius is related to the overall circle of the bagel when viewing it from the top.}
 
 The remaining two geometric parameters -- $\kappa$ and $\delta$ -- are related to the shape of the torn halves. As the name hints, elongation ($\kappa$) is a measure of how stretched out the tokamak is vertically -- is the cross-section a circle or an oval? The triangularity ($\delta$) is then how much the cross-sections point outward from the center of the device. All three's effects can be seen in \cref{fig:geometry}. \added{Their exact usage within describing flux surfaces is shown in \cref{chapter:flux}. }
 
@@ -102,7 +102,7 @@ The remaining two geometric parameters -- $\kappa$ and $\delta$ -- are related t
 			\large
 			\input{images/geometry_epsilon}
 		\end{adjustbox}
-        \caption{$\epsilon$}
+        \caption{$\varepsilon$}
     \end{subfigure} ~\\ ~\\
     \caption{Geometric Parameters} ~\\
     \small These three geometric parameters allow the toroidal cross-sections to scale radially, stretch vertically, and become more triangular -- thus improving upon simple circular slices.
@@ -150,7 +150,7 @@ To begin, density has the simplest profile. This is because it is relatively fla
 	n(\rho) = \overline n \cdot ( 1 + \nu_n ) \, \cdot ( 1 - \rho ^ 2 ) ^ {\nu_n}
 \end{equation}
 \myequations{Density Profile -- $n$}
-\added{Here, $\rho$ is a normalized radial-like flux label, with $\rho = 0$ at the magnetic axis and $\rho = 1$ at the outer plasma surface (i.e.\ the 95\% surface). While $\overline n$ is referred to as the volume-averaged density because using the volume  integral -- given by \cref{eq:qv} -- over the density profile results in that value after dividing through by the volume ($\volume$):} 
+\added{Here, $\rho$ is a normalized radial-like flux label, with $\rho = 0$ at the magnetic axis and $\rho = 1$ at the outer plasma surface (i.e.\ the 95\% surface). While $\overline n$ is referred to as the volume-averaged density because using the volume  integral -- given by \cref{eq:qv} -- over the density profile results in that value after dividing through by the volume ($\volume$):}
 \begin{equation}
 	\overline n = \frac{ \int n(\vec{\bold{r}}) \, d\vec{\bold{r}}  }{\volume}
 \end{equation}
@@ -260,7 +260,7 @@ As no theoretical backing exists, the Greenwald density limit can simply be writ
 Here, $\hat n$ has units of $10^{20} \ \frac{\textnormal{particles}}{\textnormal{m}^3}$, $N_G$ is the Greenwald density fraction, \added{and} $I_P$ is again the plasma current (measured in mega-amps)\added{.} \deleted{ and $\pi$ has its usual meaning(3.141592653...).} The final variable is then the minor radius -- a -- which was previously defined through:
 \begin{equation}
 	\tag{\ref{eq:a}}
-	a = \epsilon \cdot R_0
+	a = \varepsilon \cdot R_0
 \end{equation}
 The next step is transforming the \emph{line-averaged} density ($\hat n$) into the \emph{volume-averaged} version ($\overline n$) used in this model. Harnessing the simplicity of the density's parabolic profile allows this relation to be written in a closed form as:
  \begin{equation}
@@ -279,9 +279,9 @@ The next step is transforming the \emph{line-averaged} density ($\hat n$) into t
 \myequations{Greenwald Density -- $\overline n$}
  \begin{equation}
   \label{eq:kn}
- 	K_n = \frac{2 N_G}{\epsilon^2 \, \pi^{3/2} } \cdot \left( \frac{\Gamma \left( \nu_n + \frac{3}{2} \right)}{\Gamma \left( \nu_n + 2 \right)} \right)
+ 	K_n = \frac{2 N_G}{\varepsilon^2 \, \pi^{3/2} } \cdot \left( \frac{\Gamma \left( \nu_n + \frac{3}{2} \right)}{\Gamma \left( \nu_n + 2 \right)} \right)
 \end{equation}
-The format of the previous equation pair will be used throughout the remainder of the paper. The top equation relates \replaced{dynamic}{floating} variables (i.e.\ $\overline n$, $I_P$, and $R_0$), while the \replaced{static}{fixed}-value coefficient ($K_n$) lumps together \replaced{static}{fixed} quantities, such as: $N_G$, $\epsilon$, 2, $\pi$, and $\nu_n$.
+The format of the previous equation pair will be used throughout the remainder of the paper. The top equation relates \replaced{dynamic}{floating} variables (i.e.\ $\overline n$, $I_P$, and $R_0$), while the \replaced{static}{fixed}-value coefficient ($K_n$) lumps together \replaced{static}{fixed} quantities, such as: $N_G$, $\varepsilon$, 2, $\pi$, and $\nu_n$.
 
 \subsection{Declaring the Bootstrap Current}
 
@@ -311,7 +311,7 @@ The first term to define in current balance, \cref{eq:ibal}, is the bootstrap cu
 \begin{equation}
 \begin{split}
 	J_{BS} & = f\left( n , T , \frac{dn}{d\rho} , \frac{dT}{d\rho}  \right) \\
-		& \equiv -4.85 \cdot n \cdot T \cdot \frac{ R_0 \sqrt{ \epsilon \, \rho } }{ \sfrac{d\psi}{d\rho} } \cdot \left( \frac{1}{n} \frac{dn}{d\rho} + 0.54 \, \frac{1}{T} \frac{dT}{d\rho} \right)
+		& \equiv -4.85 \cdot n \cdot T \cdot \frac{ R_0 \sqrt{ \varepsilon \, \rho } }{ \sfrac{d\psi}{d\rho} } \cdot \left( \frac{1}{n} \frac{dn}{d\rho} + 0.54 \, \frac{1}{T} \frac{dT}{d\rho} \right)
 \end{split}
 \end{equation}
 
@@ -346,7 +346,7 @@ As shown later in the results, bootstrap fractions are often under-predicted by 
 \end{equation}
 \myequations{Bootstrap Current -- $I_{BS}$}
 \begin{equation}
-  K_{BS} = 4.879 \cdot  K_n \cdot \left( \, \frac{1+\kappa^2}{2} \, \right) \cdot \epsilon^{5/2} \cdot H_{BS}
+  K_{BS} = 4.879 \cdot  K_n \cdot \left( \, \frac{1+\kappa^2}{2} \, \right) \cdot \varepsilon^{5/2} \cdot H_{BS}
 \end{equation}
 \begin{equation}
   H_{BS} = ( 1 + \nu_n ) ( 1 + \nu_T ) ( \nu_n + 0.054 \nu_T ) \int_0^1 \frac{ \rho^{\,5/2} \, ( \, 1 - \rho^{\,2} \, )^{\, \nu_n + \nu_T - 1} }{b_p} \, d\rho
@@ -430,7 +430,7 @@ In standardized units, this becomes:
 \end{equation}
 \myequations{Fusion Power -- $P_F$}
 \begin{equation}
-  K_F = 278.3 \cdot f_D^2 \cdot ( \epsilon^2 \kappa g )
+  K_F = 278.3 \cdot f_D^2 \cdot ( \varepsilon^2 \kappa g )
 \end{equation}
 Where the standardized fusion reactivity is now,
 \begin{equation}
@@ -520,7 +520,7 @@ Combining these three equations and solving for the total plasma current ($I_P$)
 
 This is the answer we have been seeking!
 
-As mentioned before, this simple formula appears to only depend on temperature!\footnote{ This dependence only on temperature refers to dynamic variables. The plasma current can still be highly volatile to many of the static variables, such as: $\epsilon$, $\kappa$, $N_G$, $f_D$, $\nu_n$, $l_i$, etc. } Apparently, the plasma should have the same current at some temperature (i.e.\ $\overline T$ = 15 keV), regardless of the size of the machine or the strength of its magnets. This has the important corollary that each temperature maps to only one current value. \added{Further, each temperature would then map to a single magnet strength, capital cost, etc.\ (as shown next chapter).}
+As mentioned before, this simple formula appears to only depend on temperature!\footnote{ This dependence only on temperature refers to dynamic variables. The plasma current can still be highly volatile to many of the static variables, such as: $\varepsilon$, $\kappa$, $N_G$, $f_D$, $\nu_n$, $l_i$, etc. } Apparently, the plasma should have the same current at some temperature (i.e.\ $\overline T$ = 15 keV), regardless of the size of the machine or the strength of its magnets. This has the important corollary that each temperature maps to only one current value. \added{Further, each temperature would then map to a single magnet strength, capital cost, etc.\ (as shown next chapter).}
 
 As has become a mantra, though, the subtlety of this behavior lies in the self-consistency of the current-drive efficiency -- $\eta_{CD}$.
 
